fixed html title meta and scrollbar width option

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,9 @@
 @import './utils.scss';
 
+html{
+    overflow-y: overlay;
+}
+
 body {
     font-size: 62.5%;
 }
